--- a/app/src/main/res/layout/activity_facebook_login.xml
+++ b/app/src/main/res/layout/activity_facebook_login.xml
@@ -10,7 +10,7 @@
     <!--Using an ImageView that's moved a bit to the left via padding, as background-->
     <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:src="@drawable/roadtrip"
             android:scaleType="centerCrop"
             android:paddingEnd="40dp"
