--- a/app/src/main/res/menu/menu_eventrides.xml
+++ b/app/src/main/res/menu/menu_eventrides.xml
@@ -12,4 +12,9 @@
         android:orderInCategory="100"
         android:title="@string/action_open_event_on_facebook"
         app:showAsAction="never" />
+    <item
+            android:id="@+id/action_leave_group"
+            android:orderInCategory="100"
+            android:title="@string/action_leave_group"
+            app:showAsAction="never" />
 </menu>
