--- a/app/src/main/res/layout/activity_ride_page.xml
+++ b/app/src/main/res/layout/activity_ride_page.xml
@@ -126,4 +126,12 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="28dp"
             app:layout_constraintTop_toBottomOf="@+id/mainActionButton"/>
+    <TextView
+            android:text="@string/passengers_summary_for_driver"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/passengersSummary"
+            app:layout_constraintTop_toBottomOf="@+id/mainActionButton"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 </android.support.constraint.ConstraintLayout>
