--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                  xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                 xmlns:tools="http://schemas.android.com/tools"
                                                  android:id="@+id/fab_coordinator_layout"
                                                  android:layout_width="match_parent"
                                                  android:layout_height="match_parent"
@@ -86,5 +87,16 @@
                 app:backgroundTint="@android:color/white"
                 app:srcCompat="@drawable/ic_pin_drop_black_24dp"/>
     </LinearLayout>
+
+    <TextView
+            android:id="@+id/route_total_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_anchorGravity="center|top"
+            app:layout_anchor="@id/map"
+            android:layout_marginTop="120dp"
+            android:layout_marginBottom="16dp"
+            android:textSize="18sp"
+            tools:text="Total time: ~1 hour 23 minutes"/>
 
 </android.support.design.widget.CoordinatorLayout>
