--- a/app/src/main/res/layout/activity_ride_page.xml
+++ b/app/src/main/res/layout/activity_ride_page.xml
@@ -102,6 +102,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/rideMapButton"
             style="@style/Widget.AppCompat.Button.Colored"
+            android:textAllCaps="false"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/detailsLayout"
             app:layout_constraintStart_toStartOf="parent"/>
@@ -111,6 +112,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/mainActionButton"
             style="@style/Widget.AppCompat.Button.Colored"
+            android:textAllCaps="false"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/rideMapButton"
             app:layout_constraintStart_toStartOf="parent"/>
